--- a/client/app/views/header.html
+++ b/client/app/views/header.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-theme-indigo">
+<md-toolbar class="md-theme-indigo" md-scroll-shrink>
 	<div class="md-toolbar-tools">
     	<a ui-sref="player"><img src="assets\images\music-player.png" width="50px" height="50px"></img></a>
     	<span flex></span>
