--- a/client/app/views/footer.html
+++ b/client/app/views/footer.html
@@ -1,6 +1,7 @@
 <!--
+
 <md-fab-toolbar md-open="demo.isOpen" count="demo.count"
-                  md-direction="right">
+                  md-direction="left">
     <md-fab-trigger class="align-with-text">
       <md-button aria-label="menu" class="md-fab md-primary">
         <md-icon md-svg-src="assets/icons/equalizer.svg"></md-icon>
@@ -19,4 +20,5 @@
         </md-button>
       </md-fab-actions>
     </md-toolbar>
-  </md-fab-toolbar>-->
+  </md-fab-toolbar>
+-->
