--- a/client/app/views/reddit.html
+++ b/client/app/views/reddit.html
@@ -1,6 +1,11 @@
 <md-toolbar class="md-theme-indigo">
     <div class="md-toolbar-tools">
-        <md-menu md-position-mode="target target" layout="column" layout-align="center center">
+        <a ui-sref="reddit"><img src="assets\images\reddit.png" width="50px" height="50px"></img>
+        </a>
+        <span flex></span>
+        <h3>Reddit Reader</h3>
+        <span flex></span>
+        <md-menu md-position-mode="target-right target" layout="column" layout-align="center center">
             <md-button class="md-icon-button" aria-label="controls" ng-click="$mdOpenMenu($event)">
                 <md-icon md-svg-icon="assets/icons/apps.svg"></md-icon>
             </md-button>
@@ -9,17 +14,12 @@
                 <md-button ui-sref="player.songs"><span md-menu-align-target>Music</span></md-button>
             </md-menu-content>
         </md-menu>
-        <a ui-sref="reddit"><img src="assets\images\reddit.png" width="50px" height="50px"></img>
-        </a>
-        <span flex></span>
-        <h3>Reddit Reader</h3>
-        <span flex></span>
     </div>
 </md-toolbar>
   <!--Note: for scrollShrink to work, the toolbar must be a sibling of a md-content element, placed before it.-->
 <md-content style="height: 800px; z-index=0;" flex>
     <section>
-        <md-subheader class="md-primary">PENNYSTOCKS</md-subheader><!--You can use md-no-sticky class-->
+        <md-subheader class="md-primary">r/Pennystock <span class="md-caption">Top 20 posts of the day</span></md-subheader><!--You can use md-no-sticky class-->
         <md-list>
             <div ng-repeat="post in posts" layout="column">
                 <md-list-item class="md-2-line" ng-click="openTab(post.url)">
