--- a/client/app/views/reddit.html
+++ b/client/app/views/reddit.html
@@ -1,9 +1,10 @@
-<md-toolbar class="md-theme-indigo">
+<div layout="column" flex>
+<md-toolbar class="md-warn">
     <div class="md-toolbar-tools">
         <a ui-sref="reddit"><img src="assets\images\reddit.png" width="50px" height="50px"></img>
         </a>
         <span flex></span>
-        <h3>Reddit Reader</h3>
+        <h3 hide show-gt-sm>Reddit Reader</h3>
         <span flex></span>
         <md-menu md-position-mode="target-right target" layout="column" layout-align="center center">
             <md-button class="md-icon-button" aria-label="controls" ng-click="$mdOpenMenu($event)">
@@ -16,20 +17,38 @@
         </md-menu>
     </div>
 </md-toolbar>
-  <!--Note: for scrollShrink to work, the toolbar must be a sibling of a md-content element, placed before it.-->
-<md-content style="height: 800px; z-index=0;" flex>
+<md-content style="height: 500px;" flex ng-cloak>
     <section>
-        <md-subheader class="md-primary">r/Pennystock <span class="md-caption">Top 20 posts of the day</span></md-subheader><!--You can use md-no-sticky class-->
-        <md-list>
-            <div ng-repeat="post in posts" layout="column">
-                <md-list-item class="md-2-line" ng-click="openTab(post.url)">
-                    <div class="md-list-item-text" layout="column">
-                        <h3 class="md-headlin md-primary">{{ post.title }}</h3>
-                        <p class="md-caption">{{ post.author }} : {{post.ups}}</p>
-                    </div>
-                </md-list-item>
-                <md-divider></md-divider>
+        <md-subheader class="reddit-subheader">r/Pennystocks <span class="md-caption">Top 20 posts of the day</span></md-subheader>
+        <md-list layout-padding>
+            <div ng-repeat="post in pennystocks" class="md-whiteframe-8dp" layout="column">
+                <md-content>
+                    <md-list-item class="md-3-line" ng-click="openTab(post.url)" flex>
+                        <img src="{{post.thumbnail}}" width="80px" height="80px" layout-padding ng-if="post.thumbnail"/>
+                        <div class="md-list-item-text" layout="column" flex>
+                            <h3 class="md-subhead">[ <span class="icon-text">{{post.ups}}</span><md-icon md-svg-icon="assets/icons/keyboard_arrow_up_black.svg"></md-icon>] {{post.title}}</h3>
+                            <p class="md-body-2">{{post.selftext|limitTo:300}}<span ng-if='post.selftext.length > 300'> ...</span></p>
+                            <p class="md-caption"><em>- {{post.author}}</em></p>
+                        </div>
+                    </md-list-item>
+                </md-content>
+            </div>
+        </md-list>
+        <md-subheader class="reddit-subheader">r/Pics <span class="md-caption">Top 20 posts of the day</span></md-subheader>
+        <md-list layout-padding>
+            <div ng-repeat="post in pics" class="md-whiteframe-8dp" layout="column">
+                <md-content>
+                    <md-list-item class="md-3-line" ng-click="openTab(post.url)" flex>
+                        <img src="{{post.thumbnail}}" width="80px" height="80px" layout-padding ng-if="post.thumbnail"/>
+                        <div class="md-list-item-text" layout="column" flex>
+                            <h3 class="md-subhead">[ <span class="icon-text">{{post.ups}}</span><md-icon md-svg-icon="assets/icons/keyboard_arrow_up_black.svg"></md-icon>] {{post.title}}</h3>
+                            <p class="md-body-2">{{post.selftext|limitTo:300}}<span ng-if='post.selftext.length > 300'> ...</span></p>
+                            <p class="md-caption"><em>- {{post.author}}</em></p>
+                        </div>
+                    </md-list-item>
+                <md-content>
             </div>
         </md-list>
     </section>
 </md-content>
+</div>
